Modify package git path 	https://github.com/Jumbo88888/multi-cscope-db.git 	https://github.com/Jumbo88888/ctrlp.vim.git

--- a/.gitmodules
+++ b/.gitmodules
@@ -93,7 +93,8 @@
 	url = git://github.com/scrooloose/snipmate-snippets.git
 [submodule "bundle/multi-cscope-db.git"]
 	path = bundle/multi-cscope-db.git
-	url = git@github.com:Jumbo88888/multi-cscope-db.git
+	url = https://github.com/Jumbo88888/multi-cscope-db.git
 [submodule "bundle/ctrlp.vim.git"]
 	path = bundle/ctrlp.vim.git
-	url = git@github.com:Jumbo88888/ctrlp.vim.git
+        url = https://github.com/Jumbo88888/ctrlp.vim.git
+
