--- a/.gitmodules
+++ b/.gitmodules
@@ -95,3 +95,6 @@
 	path = bundle/ctrlp.vim.git
         url = https://github.com/Jumbo88888/ctrlp.vim.git
 
+[submodule "bundle/snipmate-snippets"]
+	path = bundle/snipmate-snippets
+	url = https://github.com/spf13/snipmate-snippets.git
