--- a/.gitmodules
+++ b/.gitmodules
@@ -98,3 +98,6 @@
 [submodule "bundle/snipmate-snippets"]
 	path = bundle/snipmate-snippets
 	url = https://github.com/Jumbo88888/snipmate-snippets.git
+[submodule "bundle/DirDiff.vim"]
+	path = bundle/DirDiff.vim
+	url = https://github.com/vim-scripts/DirDiff.vim.git
