--- a/.gitmodules
+++ b/.gitmodules
@@ -101,3 +101,6 @@
 [submodule "bundle/DirDiff.vim"]
 	path = bundle/DirDiff.vim
 	url = https://github.com/vim-scripts/DirDiff.vim.git
+[submodule "bundle/CCTree"]
+	path = bundle/CCTree
+	url = git@github.com:hari-rangarajan/CCTree.git
